[package]
name = "pifpafpoufbot"
version = "0.1.1"
authors = ["tanguyMichardiere <tanguy.michardiere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
irc = "0.13.6"
serde = "1.0.106"
serde_yaml = "0.8.11"
argh = "0.1.3"
