[package]
name = "pifpafpoufbot"
version = "0.1.2"
authors = ["tanguyMichardiere <tanguy.michardiere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.29"
irc = "0.13.6"
argh = "0.1.3"
toml = "0.5.6"
